src/tests/snapshots/niri__tests__window_opening__check_target_output_and_workspace@out1-fsF-wfsB2-spA2.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: B2\nset parent: A2\nconfig:\nworkspace \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nworkspace \"ws-2\" {\n    open-on-output \"headless-2\"\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-on-output \"headless-1\"\n    open-fullscreen false\n}\n\nwindow-rule {\n    match title=\"parent\"\n    open-on-output \"headless-2\"\n}"
expression: snapshot
snapshot_kind: text
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
